# neardao-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_TESTNEST_GUIDE.md  README.md  build.sh  clippy.toml  run_tests.sh  rust-toolchain.toml  wf_provider_data_load.sh
contract-builder/: Dockerfile  README.md  build.sh  continue.sh  env.sh  run_new.sh
contracts/dao/: Cargo.toml
contracts/dao/src/: action.rs  activity.rs  callback.rs  callbacks.rs  constants.rs  contract.rs  core.rs  delegation.rs  error.rs  event.rs  group.rs  helper.rs  internal.rs  lib.rs  media.rs  proposal.rs  receiver.rs  reward.rs  rewards.rs  role.rs  settings.rs  tags.rs  token_lock.rs  treasury.rs  upgrade.rs  view.rs  wallet.rs  workflow.rs
contracts/dao/src/standard_impl/: ft.rs  ft_metadata.rs  mod.rs  storage.rs
contracts/dao/src/unit_tests/: dao.rs  group.rs  mod.rs  reward.rs  tick.rs  treasury.rs  unlocking.rs  voting.rs  workflow.rs
contracts/dao/src/workflow/: deserialize.rs  error.rs  execution.rs
contracts/staking/: Cargo.toml  README.md
contracts/staking/src/: consts.rs  dao.rs  lib.rs  storage_impl.rs  user.rs
dao/: Cargo.toml
dao_factory/: Cargo.toml
data/: Cargo.toml  README.md
interpreter/: interpreter.rs
near_cli_test/: activity_add_workflow.sh  activity_add_workflow_send_near.sh  activity_bounty.sh  activity_media_add.sh  activity_near_send.sh  activity_send_near.sh  activity_skyward.sh  add_doc_file_to_finish.sh  add_member_to_finish.sh  add_right_4_call.sh  clean.sh  constants.sh  distribute_ft_to_finish.sh  finish_proposal.sh  general_proposal_to_finish.sh  init_env.sh  init_factory_and_dao.sh  invalidate_file_to_finish.sh  migrate_dao.sh  migrate_factory.sh  pay_to_finish.sh  proposal_add_workflow.sh  proposal_bounty.sh  proposal_media_add.sh  proposal_near_send.sh  proposal_send_ft.sh  proposal_skyward.sh  proposal_to_finish.sh  regular_payment_to_finish.sh  remove_member_to_finish.sh  (+2 more)
tests/integration_tests/: Cargo.toml
tests/integration_tests/src/: basic_fncall_checks.rs  constants.rs  dao.rs  lib.rs  staking.rs  technologic.rs  test_data.rs  utils.rs  wf_input.rs  wf_input_bench.rs  workflow_actions.rs
tests/integration_tests/src/contract_utils/: dao.rs  dao_factory.rs  ft_factory.rs  functions.rs  fungible_token.rs  mod.rs  skyward.rs  staking.rs  wnear.rs  workflow_provider.rs
tests/integration_tests/src/contract_utils/dao/: check.rs  checks.rs  init.rs  mod.rs  proposal.rs  reward.rs  view.rs  views.rs
tests/integration_tests/src/contract_utils/dao/activity/: mod.rs  reward.rs  skyward.rs  trade.rs  wf_add.rs
tests/integration_tests/src/contract_utils/dao/activity_input/: admin_package.rs  mod.rs  reward.rs  test_optional_actions.rs  trade.rs
tests/integration_tests/src/contract_utils/dao/types/: consts.rs  group.rs  init.rs  mod.rs  proposal.rs  reward.rs  view.rs
tests/integration_tests/src/test_data/: mod.rs  wf_optional_actions.rs
tests/integration_tests/src/tests/: basic_fncall_checks.rs  dao_upgrade.rs  mod.rs  staking.rs  technologic.rs
tests/integration_tests/src/tests/dao_workflow/: admin_package1.rs  basic_package1.rs  bounty1.rs  group1.rs  group_package1.rs  lock1.rs  media1.rs  mod.rs  optional_actions.rs  reward1.rs  skyward1.rs  trade1.rs
tests/integration_tests/src/types/: fungible_token.rs  mod.rs  staking.rs  standard.rs
tests/integration_tests/src/types/dao/: group.rs  init.rs  media.rs  mod.rs  proposal.rs  receiver.rs  reward.rs  view.rs  workflow.rs
tests/integration_tests/src/utils/: mod.rs  standard_call.rs  standard_view.rs  test_utils.rs
tests/integration_tests/src/utils/contract/: dao_factory.rs  ft_factory.rs  functions.rs  fungible_token.rs  mod.rs  skyward.rs  staking.rs  wnear.rs  workflow_provider.rs
tests/integration_tests/src/utils/contract/dao/: check.rs  init.rs  mod.rs  proposal.rs  reward.rs  upgrade.rs  view.rs
tests/integration_tests/src/utils/contract/dao/activity_input/: basic_package.rs  bounty.rs  group.rs  group_package.rs  lock.rs  media.rs  mod.rs  reward.rs  skyward.rs  test_optional_actions.rs  trade.rs  wf_add.rs
tests/mocks/upgrade_dao_v2/: Cargo.toml
tests/mocks/upgrade_dao_v2/src/: constants.rs  core.rs  group.rs  internal.rs  lib.rs  receiver.rs  reward.rs  settings.rs  tags.rs  treasury.rs  upgrade.rs  view.rs  wallet.rs
tests/mocks/upgrade_dao_v2/src/workflow/: deserialize.rs  execution.rs
tests/unit_tests/: Cargo.toml
tests/unit_tests/src/: lib.rs
wf_data_generator/: Cargo.toml
wf_data_generator/src/: main.rs
(+152 files in other folders)
