[workspace]
members = [
    "contracts/*", 
    "library", 
    "data",
    "tests/integration_tests",
    "tests/unit_tests",
    "tests/mocks/*"
]

[profile.release]
codegen-units = 1       
opt-level = "z"         
lto = true              
debug = false           
panic = "abort"         
overflow-checks = true
strip = true