[package]
name = "wf_data_generator"
version = "0.1.0"
edition = "2021"
description = "Simple data generator for wf loader script."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
data = { path = "./../data"}
library = {path = "./../library" }
