[package]
name = "dao"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.8", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.8"
library = { path = "./../../library", version = "0.1.0" }

[dev-dependencies]
data = { path = "./../../data", version = "0.1.0" }

[features]
testnet = []
