[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
near-sdk = "4.0.0-pre.8"
anyhow = "1.0.56"
near-units = "0.2.0"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = "1.0.79"
tokio = "1.17.0"
workspaces = {version = "0.2.1", features = ["unstable"] }
library = {path = "./../../library" }
simple_dao = {path = "./../mocks/simple_dao" }
rand = "0.8.5"
claim = "0.5.0"

