[package]
name = "upgrade_dao_v2"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {version = "4.0.0", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.8"
library = { path = "./../../../library", version = "0.1.0" }
thiserror = "1.0.31"

[features]
testnet = []
